2020-03-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* Removes usage of input_lock with editable combo-boxes, replaced
	by having editable_comboboxlayoutmanager inherit methods that access
	the underlying input field from the widget itself.

0.26

2020-02-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Using a key/button to select a list item explicitly scrolls it into
	view.

2019-11-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* In standard and editable combo-boxes, rename selection_changed()
	to on_selection_changed(), for consistency. Throw an exception
	if the wrong on_selection_changed() gets called.

2019-10-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* grid and item layout managers: remove_rows() and remove_items().

2019-10-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/input_field_lock.H: Implement discrete input_lock
	and const_input_lock objects.

2019-09-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* color_picker: Optionally adjust the colors' alpha channel.

2019-09-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add image_color as a color_arg option, use an image for a
	background color.

2019-09-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* file_dialog: clean the filename field after closing the dialog
	successfully.

	* Add create_ok2_cancel_dialog.

	* remove_item() did not work correctly in a combo-box.

2019-09-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* input_field/input_field.C: add validate_modified(); do not
	validate disabled fields.
	Add optional parameter to set() that specifies the set value's
	validation status.

2019-09-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* book layout manager: implement initial invocation of on_opened()
	callback.

	* focus/focusable.C: add IN_THREAD overloads for various focusable
	methods. Implement an optional ok_if_not_possible to request_focus().

2019-09-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix race condition resulting in a deadlock if an exception