@@ -16,6 +16,7 @@
 #include <x/weakptr.H>
 #include <x/strtok.H>
 #include <x/functionalrefptr.H>
+#include <x/refptr_traits.H>
 #include <sstream>
 #include <optional>
 #include <utility>
@@ -112,11 +113,18 @@ public:
 
 	//! Most recently validated value.
 
+	//! This should not be modified, call set() to do this and update
+	//! the input field.
 	mutable mpobj<std::optional<type>> validated_value;
 
 	//! Set a new value in the input field.
 
 	virtual void set(const std::optional<type> &v)=0;
+
+	//! Set a new value in the input field.
+
+	virtual void set(ONLY IN_THREAD,
+			 const std::optional<type> &v)=0;
 };
 
 //! Implement the \ref validated_input_field "input field validation" object.
@@ -135,6 +143,157 @@ public:
 	//! Captured formatting callable object.
 	const canonical_formatter formatter;
 
+	//! What the formatter returns: std::string or std::u32string
+
+	typedef decltype(std::declval<canonical_formatter &>()
+			 (std::declval<const type &>())
+			 ) formatter_ret_t;
+
+	//! Alias
+	typedef validated_input_field_implObj<type, canonical_formatter> me_t;
+
+	//! Common logic shared by set() overloads.
+
+	struct set_logic {
+
+		//! My validated input field object.
+		me_t &me;
+
+		//! A lock on the validated value.
+		typedef typename mpobj<std::optional<type>>::lock value_lock_t;
+
+		//! Constructor
+		set_logic(me_t &me) : me{me}
+		{
+		}
+
+		//! Set the new validated value
+
+		//! Lock my input field and validated value, then invoke
+		//! do_locked_set(). The implementation of do_locked_set()
+		//! receives the locked objects, must updated the locked
+		//! validated value, and call set_cleanup().
+		//!
+		//! The validated input field's set() overloads already have
+		//! the new value, and they update the validated value
+		//! directly, then call set_cleanup().
+		//!
+		//! The on_validate() callback retrieves the contents of the
+		//! input field, uses the app-provided callback to construct
+		//! a new value, place it in the validated value object,
+		//! and then invoke set_cleanup().
+
+		void do_set()
+		{
+			//! Find my input field
+			auto my_field_ptr=me.my_inputfield.getptr();
+
+			if (!my_field_ptr)
+				return;
+
+			input_field my_field{my_field_ptr};
+
+			// An input_lock is obtained first...
+
+			input_lock lock{my_field};
+
+			// ... then the validated_value lock.
+
+			value_lock_t value_lock{me.validated_value};
+
+			do_locked_set(my_field, lock, value_lock);
+		}
+
+		//! Ready to set a new value
+
+		//! do_set() calls it, after locking the input field and
+		//! the validated value.
+		//!
+		//! The implementing subclass must update the validated
+		//! value, and forward these parameters to set_cleanup().
+
+		virtual void do_locked_set(const input_field &,
+					   const input_lock &,
+					   value_lock_t &)=0;
+
+		//! Finished setting the new value.
+
+		//! Format the validated value and invoke set_as_string(),
+		//! if needed.
+		//!
+		//! set_as_string() gets implemented in either
+		//! set_logic_not_in-thread or set_logic_in_thread.
+
+		void set_cleanup(const input_field &my_field,
+				 const input_lock &lock,
+				 value_lock_t &value_lock)
+		{
+			auto &v=*value_lock;
+
+			if (!v)
+				// Do not set() the input field. No value
+				// means it's not valid, and set()ing it
+				// validates the contents of the input field.
+				return;
+
+			formatter_ret_t s=me.formatter(*v);
+
+			// Do not bother with set() if the value is the same.
+
+			if (s == input_field_get_for_validator<decltype(s)>
+			    ::get(lock))
+				return;
+			set_as_string(my_field, s);
+		}
+
+		//! A new validated value has been set.
+
+		//! Implemented in the subclass by calling the appropriate
+		//! set() overload.
+		virtual void set_as_string(const input_field &my_filter,
+					   const formatter_ret_t &s)=0;
+	};
+
+	//! Setting the new validated value not in the connection thread.
+
+	//! Invokes the non-IN_THREAD overload of set().
+	struct set_logic_not_in_thread : set_logic {
+
+		using set_logic::set_logic;
+
+		//! Implement set_as_string()
+
+		void set_as_string(const input_field &my_field,
+				   const formatter_ret_t &s) override
+		{
+			my_field->set(s);
+		}
+	};
+
+	//! Setting the new validated value not in the connection thread.
+
+	//! Invokes the IN_THREAD overload of set().
+	struct set_logic_in_thread : set_logic {
+
+		//! We are running in the connection thread.
+		ONLY IN_THREAD;
+
+		//! Constructor saves IN_THREAD.
+		set_logic_in_thread(ONLY IN_THREAD,
+				    me_t &me) : set_logic{me},
+						IN_THREAD{IN_THREAD}
+		{
+		}
+
+		//! Implement set_as_string()
+
+		void set_as_string(const input_field &my_field,
+				   const formatter_ret_t &s) override
+		{
+			my_field->set(IN_THREAD, s);
+		}
+	};
+
 	//! Constructor
 	template<typename F>
 	validated_input_field_implObj(const input_field &my_inputfield, F &&f)
@@ -146,59 +305,56 @@ public:
 	//! Destructor
 	~validated_input_field_implObj()=default;
 
+	//! set() a new value
+
+	//! Common logic by both non-IN_THREAD and IN_THREAd set()
+	//! overrides. set() passes the new validated value to the
+	//! constructor. do_locked_set() gets implemented by copying the
+	//! new value into the locked validated value, then invoking
+	//! set_cleanup().
+
+	template<typename base_type>
+	struct set_impl : base_type {
+
+		//! New validated value.
+		const std::optional<type> &v;
+
+		//! Constructor
+		template<typename ...Args>
+		set_impl(const std::optional<type> &v,
+			 Args && ...args)
+			: base_type{std::forward<Args>(args)...}, v{v}
+		{
+		}
+
+		//! Implement do_locked_set().
+		void do_locked_set(const input_field &my_field,
+				   const input_lock &lock,
+				   typename base_type::value_lock_t
+				   &value_lock) override
+		{
+			*value_lock=v;
+			this->set_cleanup(my_field, lock, value_lock);
+		}
+	};
+
+
 	//! Implement set().
 
 	void set(const std::optional<type> &v) override
 	{
-		auto my_field_ptr=this->my_inputfield.getptr();
+		set_impl<set_logic_not_in_thread> impl{v, *this};
 
-		if (!my_field_ptr)
-			return;
-
-		// An input_lock is obtained first...
-
-		input_lock lock{my_field_ptr};
-
-		// ... then the validated_value lock.
-		//
-		// Same locking order as in install_validator().
-
-		typename mpobj<std::optional<type>>::lock
-			value_lock{this->validated_value};
-
-		set(v, my_field_ptr, lock, value_lock);
+		impl.do_set();
 	}
 
 	//! Implement set().
 
-	//! Everything is locked. Set the most recently validated value,
-	//! and use the formatter to convert it to a text value, then
-	//! set() the input field.
-
-	void set(const std::optional<type> &v,
-		 const input_field &my_input_field,
-		 input_lock &my_input_field_lock,
-		 typename mpobj<std::optional<type>>::lock &value_lock)
+	void set(ONLY IN_THREAD, const std::optional<type> &v) override
 	{
-		*value_lock=v;
+		set_impl<set_logic_in_thread> impl{v, IN_THREAD, *this};
 
-		if (!v)
-			// Do not set() the input field. No value means it's
-			// not valid, and set()ing it validates the contents
-			// of the input field.
-			return;
-
-		auto s=formatter(*v);
-
-		// Do not bother with set() if the value is the same.
-
-		if (s == input_field_get_for_validator<decltype(s)>
-		    ::get(my_input_field_lock))
-			return;
-
-		// We just validated this, so note this value as a validated
-		// one.
-		my_input_field->set(s, true);
+		impl.do_set();
 	}
 };
 
@@ -259,55 +415,91 @@ auto input_fieldObj::set_validator(validator_functor &&validator,
 			 std::forward<canonical_format_functor>
 			 (canonical_format));
 
+	//! The constructed validated input field implementation type.
+	typedef decltype(validated) validated_t;
+
+	//! The validated input field's base class.
+
+	//! Alias for the me_t type of the \c validated object.
+	typedef typename refptr_traits<validated_t>::obj_t::me_t me_t;
+
+	//! Alias for the set_logic_in_thread in the \c validated_object.
+	typedef typename me_t::set_logic_in_thread set_logic_in_thread;
+
+	//! Implement the on_validate() callback by set()ing the validated value
+
+	struct on_validate_set_impl : set_logic_in_thread {
+
+		//! The validator
+		const validator_functor &validator;
+
+		//! The trigger that invoked the validator.
+		const callback_trigger_t &trigger;
+
+		//! New validated value, if there is one.
+		std::optional<std::optional<type>> new_value;
+
+		//! Constructor
+		on_validate_set_impl(ONLY IN_THREAD,
+				     me_t &me,
+				     const validator_functor &validator,
+				     const callback_trigger_t &trigger)
+			: set_logic_in_thread{IN_THREAD, me},
+			  validator{validator},
+			  trigger{trigger}
+		{
+		}
+
+		//! Implement do_locked_set().
+
+		//! Gets the value of the input field, calls the validator
+		//! that computes the validated value, sets it, then
+		//! calls set_cleanup().
+		void do_locked_set(const input_field &my_field,
+				   const input_lock &lock,
+				   typename set_logic_in_thread::value_lock_t
+				   &value_lock) override
+		{
+			// Get the contents of the input
+			// field, trim off the
+			// leading and the trailing
+			// whitespace, invoke
+			// the validator function.
+
+			*value_lock=validator(this->IN_THREAD,
+					      trim(validator_t::get(lock)),
+					      my_field,
+					      trigger);
+
+			// And set the validated value.
+
+			new_value=*value_lock;
+
+			this->set_cleanup(my_field, lock, value_lock);
+		}
+	};
+
 	on_validate
 		([=]
 		 (ONLY IN_THREAD,
 		  const callback_trigger_t &trigger)->bool
 		 {
-			 auto my_field_ptr=validated->my_inputfield.getptr();
+			 on_validate_set_impl impl{IN_THREAD,
+						   *validated,
+						   validator,
+						   trigger};
 
-			 if (!my_field_ptr)
+			 impl.do_set();
+
+			 // No new value was produced, valid or not. We must
+			 // be in the process of getting destroyed, so punt.
+			 if (!impl.new_value)
 				 return true;
 
-			 // An input_lock is obtained first...
-			 // ... then the validated_value lock.
-			 //
-			 // Same locking order as above, but release the locks
-			 // before calling the new_value callback, so that it
-			 // gets called with all the locks released.
+			 // Declare the new value.
+			 new_value(IN_THREAD, *impl.new_value);
 
-			 auto v=({
-					 input_lock my_input_field_lock{
-						 my_field_ptr};
-
-					 typename mpobj<std::optional<type>>
-						 ::lock
-						 lock{validated
-							 ->validated_value};
-
-					 // Get the contents of the input
-					 // field, trim off the
-					 // leading and the trailing
-					 // whitespace, invoke
-					 // the validator function.
-
-					 auto v=validator
-						 (IN_THREAD,
-						  trim(validator_t::get
-						       (my_input_field_lock)),
-						  my_field_ptr, trigger);
-
-					 // And set the validated value.
-
-					 validated->set(v, my_field_ptr,
-							my_input_field_lock,
-							lock);
-
-					 v;
-				 });
-
-			 new_value(IN_THREAD, v);
-			 return v.has_value();
+			 return impl.new_value->has_value();
 		 });
 
 	return validated_input_field<type>(validated);
